--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="src/assets/images/default-cocktail.png" />
+  <link rel="icon" type="image/svg+xml" href="src/assets/images/cocktail-logo.png" />
   
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,7 +11,7 @@
 
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bartender</title>
+  <title>BarFly</title>
 </head>
 
 <body>
